--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <style>
     .headerMain {
-        background-image: url('http://lorempixel.com/1200/400/business');
+        background: Green;
     }
 </style>
 
