--- a/index.html
+++ b/index.html
@@ -3,80 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Portfolio for Thomas Bartlett</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   </head>
   <style>
-    .headerMain {
-        background: Green;
+    .intro-section{
+      background: orange
     }
-</style>
+  </style>
 
-<body>
-    <!-- Responsive NavBar -->
-    <nav class="navbar navbar-dark bg-primary navbar-expand-sm fixed-top">
-        <div class="container"> <a href="#" class="navbar-brand">Company</a>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#idNav"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="idNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-                    <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-                    <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- Image page header -->
-    <header class="headerMain">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 mx-auto headingtext">
-                    <div class="display-4 text-uppercase bg-dark">Welcome Page</div> <span class="text-muted bg-dark">Bootstrap 4 website from scratch</span> </div>
-            </div>
-        </div>
-    </header>
-    <!-- Main Content -->
-    <div class="container">
-        <h1 class="">Page Heading</h1> <small>More about this page</small>
-        <div class="jumbotron">
-            <div class="container">
-                <div class="display-3">Hello World</div>
-                <p>Jumbotron example within Bootstrap 4</p>
-                <p><a class="btn btn-primary" href="#">Learn More</a></p>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4"><img src="http://via.placeholder.com/350x150" class="img-fluid"></div>
-                <div class="col-md-8"><span class="h3">Welcome to my website blah blah b lah blahh blah</span>
-                    <hr>
-                    <p>Lorem ipsum default text. Lorem ipsum default text.Lorem ipsum default text.Lorem ipsum default text.Lorem ipsum default text.Lorem ipsum default text.Lorem ipsum default text.Lorem ipsum default text.Lorem ipsum default text.</p>
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="col-md-4"><img src="http://via.placeholder.com/350x150" class="img-fluid"></div>
-                <div class="col-md-4"><img src="http://via.placeholder.com/350x150" class="img-fluid"></div>
-                <div class="col-md-4"><img src="http://via.placeholder.com/350x150" class="img-fluid"></div>
-            </div>
-        </div>
+  <body>
+    <div class="container intro-section">
+      
     </div>
-    <!-- footer social media links copyright etc..... -->
-    <footer>
-        <div class="container-fluid bg-dark text-light">
-            <div class="row">
-                <div class="col-md-8 mx-auto ">
-                    <p class="text-muted text-center">Copyright © Your own website 2017</p>
-                    <ul class="list-inline text-center">
-                        <li class="list-inline-item"><a href="#"><i class="fa fa-facebook-official text-light" aria-hidden="true"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fa fa-youtube text-light" aria-hidden="true"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fa fa-twitter text-light" aria-hidden="true"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
