--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
   <style>
     .intro-section{
       background: orange
+      font: white
     }
   </style>
 
   <body>
     <div class="container intro-section">
-      
+      <p>Some Testing Text</p>
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
