--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   </head>
+  <style>
+    .intro-section{
+      background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT58iasZ2qGm5Zx8ZdBp0M121wckyw_8-v-Aw&s');
+    }
+  </style>
 
   <body>
     <div class="container intro-section bg-warning text-white">
