--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <style>
     .intro-section{
       background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT58iasZ2qGm5Zx8ZdBp0M121wckyw_8-v-Aw&s');
+      background-repeat: no-repeat;
+      background-size: cover;
     }
   </style>
 
