--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
   <body>
     <div class="container intro-section bg-warning text-white">
-      <p>Some Testing Text</p>
+      <div class="jumbotron">
+        <p>Sample Text</p>
+      </div>
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
