--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
   </style>
 
   <body>
-    <div class="container intro-section bg-warning text-white">
-      <div class="jumbotron">
-        <p>Sample Text</p>
+    <div class="jumbotron">
+      <div class="container">
+        <div class="display-3">Hello World</div>
+        <p>Jumbotron example within Bootstrap 4</p>
+        <p><a class="btn btn-primary" href="#">Learn More</a></p>
       </div>
     </div>
     
