--- a/index.html
+++ b/index.html
@@ -1,29 +1,86 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio for Thomas Bartlett</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  </head>
-  <style>
-    .intro-section{
-      background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT58iasZ2qGm5Zx8ZdBp0M121wckyw_8-v-Aw&s');
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-  </style>
-
-  <body>
-    <div class="jumbotron">
-      <div class="container">
-        <div class="display-3">Hello World</div>
-        <p>Jumbotron example within Bootstrap 4</p>
-        <p><a class="btn btn-primary" href="#">Learn More</a></p>
-      </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        .section {
+            padding: 50px 20px;
+            min-height: 100vh;
+        }
+        .nav {
+            position: fixed;
+            right: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+        .nav a {
+            display: block;
+            margin-bottom: 10px;
+            padding: 10px;
+            background-color: #333;
+            color: white;
+            text-decoration: none;
+            text-align: center;
+        }
+        .nav a:hover {
+            background-color: #555;
+        }
+        #about {
+            background-color: #f0f0f0;
+        }
+        #projects {
+            background-color: #e0e0e0;
+        }
+        #education {
+            background-color: #d0d0d0;
+        }
+        #work {
+            background-color: #c0c0c0;
+        }
+        #contact {
+            background-color: #b0b0b0;
+        }
+    </style>
+</head>
+<body>
+    <div class="nav">
+        <a href="#about">About Me</a>
+        <a href="#projects">Projects</a>
+        <a href="#education">Education</a>
+        <a href="#work">Work Experiences</a>
+        <a href="#contact">Contact Me</a>
     </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+
+    <section id="about" class="section">
+        <h1>About Me</h1>
+        <p>Write about yourself here.</p>
+    </section>
+
+    <section id="projects" class="section">
+        <h1>Projects</h1>
+        <p>Showcase your projects here.</p>
+    </section>
+
+    <section id="education" class="section">
+        <h1>Education</h1>
+        <p>List your educational background here.</p>
+    </section>
+
+    <section id="work" class="section">
+        <h1>Work Experiences</h1>
+        <p>Describe your work experiences here.</p>
+    </section>
+
+    <section id="contact" class="section">
+        <h1>Contact Me</h1>
+        <p>Provide your contact information here.</p>
+    </section>
+</body>
 </html>
