--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             background-color: #f0f0f0;
         }
         #projects {
+            background-image: url('project-section.jpg');
             background-color: #e0e0e0;
         }
         #education {
