--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             background-color: #f0f0f0;
         }
         #projects {
-            background-image: url('project-section.jpg');
+            background-image: url('./project-section.jpg');
+            background-repeat: no repeat;
         }
         #education {
             background-color: #d0d0d0;
