--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             background-color: #f0f0f0;
         }
         #projects {
-            background-image: url("images/project-section.jpg");
+            background-image: url("images/project.jpg");
             background-repeat: no repeat;
             background-attachment: fixed;
             background-size: cover;
