--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
         .section {
             padding: 50px 20px;
             min-height: 100vh;
+            background-size: cover;
+            background-position: center;
         }
-        .nav {
+        .navbar {
             position: fixed;
-            right: 20px;
+            right: 0;
             top: 50%;
             transform: translateY(-50%);
+            z-index: 1000;
         }
-        .nav a {
+        .navbar a {
             display: block;
             margin-bottom: 10px;
             padding: 10px;
@@ -28,61 +29,79 @@
             color: white;
             text-decoration: none;
             text-align: center;
+            border-radius: 50%;
         }
-        .nav a:hover {
+        .navbar a:hover {
             background-color: #555;
         }
         #about {
-            background-color: #f0f0f0;
+            background-color: #f8f9fa;
         }
         #projects {
-            background-image: url("images/project.jpg");
-            background-repeat: no repeat;
-            background-size: cover;
+            background-color: #e9ecef;
         }
         #education {
-            background-color: #d0d0d0;
+            background-color: #dee2e6;
         }
         #work {
-            background-color: #c0c0c0;
+            background-color: #ced4da;
         }
         #contact {
-            background-color: #b0b0b0;
+            background-color: #adb5bd;
         }
     </style>
 </head>
 <body>
-    <div class="nav">
-        <a href="#about">About Me</a>
-        <a href="#projects">Projects</a>
-        <a href="#education">Education</a>
-        <a href="#work">Work Experiences</a>
-        <a href="#contact">Contact Me</a>
-    </div>
+    <!-- Floating Navigation -->
+    <nav class="navbar">
+        <a href="#about" class="nav-link">A</a>
+        <a href="#projects" class="nav-link">P</a>
+        <a href="#education" class="nav-link">E</a>
+        <a href="#work" class="nav-link">W</a>
+        <a href="#contact" class="nav-link">C</a>
+    </nav>
 
-    <section id="about" class="section">
-        <h1>About Me</h1>
-        <p>Write about yourself here.</p>
+    <!-- About Me Section -->
+    <section id="about" class="section d-flex align-items-center">
+        <div class="container text-center">
+            <h1>About Me</h1>
+            <p class="lead">Write about yourself here.</p>
+        </div>
     </section>
 
-    <section id="projects" class="section">
-        <h1>Projects</h1>
-        <p>Showcase your projects here.</p>
+    <!-- Projects Section -->
+    <section id="projects" class="section d-flex align-items-center">
+        <div class="container text-center">
+            <h1>Projects</h1>
+            <p class="lead">Showcase your projects here.</p>
+        </div>
     </section>
 
-    <section id="education" class="section">
-        <h1>Education</h1>
-        <p>List your educational background here.</p>
+    <!-- Education Section -->
+    <section id="education" class="section d-flex align-items-center">
+        <div class="container text-center">
+            <h1>Education</h1>
+            <p class="lead">List your educational background here.</p>
+        </div>
     </section>
 
-    <section id="work" class="section">
-        <h1>Work Experiences</h1>
-        <p>Describe your work experiences here.</p>
+    <!-- Work Experiences Section -->
+    <section id="work" class="section d-flex align-items-center">
+        <div class="container text-center">
+            <h1>Work Experiences</h1>
+            <p class="lead">Describe your work experiences here.</p>
+        </div>
     </section>
 
-    <section id="contact" class="section">
-        <h1>Contact Me</h1>
-        <p>Provide your contact information here.</p>
+    <!-- Contact Me Section -->
+    <section id="contact" class="section d-flex align-items-center">
+        <div class="container text-center">
+            <h1>Contact Me</h1>
+            <p class="lead">Provide your contact information here.</p>
+        </div>
     </section>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
