--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             background-color: #f8f9fa;
         }
         #projects {
-            background-color: #e9ecef;
+            background-image: url("/images/project.jpg);
         }
         #education {
             background-color: #dee2e6;
