--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             background-color: #f8f9fa;
         }
         #projects {
-            bg-image: url("/images/project.jpg);
+            background-image: url("/images/project.jpg");
         }
         #education {
             background-color: #dee2e6;
@@ -53,7 +53,7 @@
 </head>
 <body>
     <!-- Floating Navigation -->
-    <nav class="navbar">
+    <nav class="navbar flex-column">
         <a href="#about" class="nav-link">A</a>
         <a href="#projects" class="nav-link">P</a>
         <a href="#education" class="nav-link">E</a>
