--- a/index.html
+++ b/index.html
@@ -34,11 +34,18 @@
         .navbar a:hover {
             background-color: #555;
         }
+        #intro {
+            background-image: url("/images/intro.jpg");
+            background-repeat: no repeat;
+            background-size: cover;
+        }
         #about {
             background-color: #f8f9fa;
         }
         #projects {
             background-image: url("/images/project.jpg");
+            background-repeat: no repeat;
+            background-size: cover;
         }
         #education {
             background-color: #dee2e6;
@@ -61,6 +68,14 @@
         <a href="#contact" class="nav-link">C</a>
     </nav>
 
+    <!-- Intro Section -->
+    <section id="intro" class="section d-flex align-items-center">
+        <div class="container text-center">
+            <h1>Thomas Bartlett</h1>
+            <p class="lead">Write about yourself here.</p>
+        </div>
+    </section>
+    
     <!-- About Me Section -->
     <section id="about" class="section d-flex align-items-center">
         <div class="container text-center">
