--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             background-image: url("/images/intro.jpg");
             background-repeat: no repeat;
             background-size: cover;
+            text: white;
         }
         #about {
             background-color: #f8f9fa;
