--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
             background-image: url("/images/intro.jpg");
             background-repeat: no repeat;
             background-size: cover;
-            text: white;
         }
         #about {
             background-color: #f8f9fa;
@@ -70,7 +69,7 @@
     </nav>
 
     <!-- Intro Section -->
-    <section id="intro" class="section d-flex align-items-center">
+    <section id="intro" class="section d-flex align-items-center text-white">
         <div class="container text-center">
             <h1>Thomas Bartlett</h1>
             <p class="lead">Write about yourself here.</p>
