--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My Portfolio</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 
     <style>
         .section {
@@ -72,7 +73,9 @@
     <section id="intro" class="section d-flex align-items-center text-white">
         <div class="container text-center">
             <h1>Thomas Bartlett</h1>
-            <p class="lead">Write about yourself here.</p>
+            <p class="ghost-writer">
+                <span id="text"></span><span class="cursor">|</span>
+            </p>
         </div>
     </section>
     
@@ -118,5 +121,6 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
