--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     <section id="intro" class="section d-flex align-items-center text-white">
         <div class="container text-center">
             <h1>Thomas Bartlett</h1>
-            <p class="ghost-writer">
+            <div class="ghost-writer">
                 <span id="text"></span><span class="cursor">|</span>
-            </p>
+            </div>
         </div>
     </section>
     
