--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>My Portfolio</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/_css/styles.css">
 
     <style>
         .section {
@@ -56,6 +55,22 @@
         }
         #contact {
             background-color: #adb5bd;
+        }
+        .cursor {
+            display: inline-block;
+            background-color: #ffffff;
+            width: 2px;
+            margin-left: 5px;
+            animation: blink 0.7s steps(1) infinite;
+        }
+
+        @keyframes blink {
+            0%, 50% {
+                opacity: 1;
+            }
+            50%, 100% {
+                opacity: 0;
+            }
         }
     </style>
 </head>
@@ -121,6 +136,6 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/_scripts/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
