--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             background-size: cover;
         }
         #about {
-            background-color: #f8f9fa;
+            background-color: black;
         }
         #projects {
             background-image: url("/images/project.jpg");
@@ -95,7 +95,7 @@
     </section>
     
     <!-- About Me Section -->
-    <section id="about" class="section d-flex align-items-center">
+    <section id="about" class="section d-flex align-items-center text-white">
         <div class="container text-center">
             <h1>About Me</h1>
             <p class="lead">Write about yourself here.</p>
