--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         }
         #projects {
             background-image: url("/images/project.jpg");
+            background-image: bg-opacity-50;
             background-repeat: no repeat;
             background-size: cover;
         }
