--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </section>
     
     <!-- About Me Section -->
-    <section id="about" class="section d-flex align-items-center text-white">
+    <section id="about" class="section d-flex align-items-center text-white bg-gradient">
         <div class="container text-center">
             <h1>About Me</h1>
             <p class="lead">Write about yourself here.</p>
