--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
             <h1>About Me</h1>
             <p class="lead">Write about yourself here.</p>
         </div>
+        <img class="rounded-circle" alt="avatar1" src="/images/AboutMe.jpg" />
     </section>
 
     <!-- Projects Section -->
