--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="container text-center">
             <h1>About Me</h1>
             <p class="lead">Write about yourself here.</p>
-            <img class="rounded-circle img-fluid" alt="avatar1" src="/images/AboutMe.jpg" />
+            <img class="rounded-circle img-fluid float-left" alt="avatar1" src="/images/AboutMe.jpg" />
         </div>
         
     </section>
