--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
     <section id="about" class="section d-flex align-items-center text-white bg-gradient">
         <div class="container text-center">
             <h1>About Me</h1>
-            <p class="lead">Write about yourself here.</p>
-            <img class="rounded-circle img-fluid float-left" alt="avatar1" src="/images/AboutMe.jpg" />
+            <p class="lead"><img class="rounded-circle img-fluid float-left" alt="avatar1" src="/images/AboutMe.jpg" />Write about yourself here.</p>
+            
         </div>
         
     </section>
