--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <section id="about" class="section d-flex text-white bg-gradient">
         <div class="container">
             <h1>About Me</h1>
-            <p class="lead"><img class="rounded-circle img-fluid float-left img-thumbnail" alt="avatar1" src="/images/AboutMe.jpg" />Write about yourself here.</p>
+            <p class="lead"><img class="rounded-circle img-fluid float-left img-thumbnail" alt="avatar1" src="/images/AboutMe2.jpg" />Write about yourself here.</p>
             
         </div>
         
