--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
     <!-- About Me Section -->
     <section id="about" class="section d-flex text-white bg-gradient">
         <div class="container">
-            <h1>About Me</h1>
-            <p class="lead"><img class="rounded-circle img-fluid float-left img-thumbnail" alt="avatar1" src="/images/AboutMe2.jpg" />Write about yourself here.</p>
+            <img class="rounded-circle img-fluid float-left img-thumbnail" alt="avatar1" src="/images/AboutMe.jpg" />
+            <p class="lead">Write about yourself here.</p>
             
         </div>
         
