--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@
     <section id="about" class="section d-flex text-white bg-gradient">
         <div class="container">
             <img class="rounded-circle img-fluid float-left img-thumbnail" alt="avatar1" src="/images/AboutMe.jpg" />
-            <p class="lead">Write about yourself here.</p>
-            
+            <div>
+                <p class="lead">Write about yourself here.</p>
+            </div>
         </div>
         
     </section>
