--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
     <section id="about" class="section d-flex text-white bg-gradient">
         <div class="container">
             <img class="rounded-circle img-fluid float-left img-thumbnail" alt="avatar1" src="/images/AboutMe.jpg" />
-            <div>
-                <p class="lead">Write about yourself here.</p>
-            </div>
+        </div>
+        <div class = "container-fluid">
+            <p class="lead">Write about yourself here.</p>
         </div>
         
     </section>
