--- a/index.html
+++ b/index.html
@@ -98,8 +98,14 @@
     <!-- About Me Section -->
     <section id="about" class="section d-flex text-white bg-gradient">
         <div class = "container-fluid">
-            <img class="rounded-circle img-fluid float-left img-thumbnail" alt="avatar1" src="/images/AboutMe.jpg" />
-            <p class="lead">Write about yourself here.</p>
+            <div class = "row">
+                <div class = "col-md-4">
+                    <img class="rounded-circle img-fluid float-left img-thumbnail" alt="avatar1" src="/images/AboutMe.jpg">
+                </div>
+                <div class = "col-md-8">
+                    <p>About Me</p>
+                </div>
+            </div>
         </div>
         
     </section>
