--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
                     <img class="rounded-circle img-fluid float-left img-thumbnail" alt="avatar1" src="/images/AboutMe.jpg">
                 </div>
                 <div class = "col-md-8">
-                    <p>About Me</p>
+                    <p>Highly motivated and detail-oriented recent graduate with a strong foundation in Software Development. 
+                        Proficient in multiple aspects of the software development lifecycle, as well as multiple tools and languages for application development, developed through my recent studies at Southern New Hampshire University Online. 
+                        I have demonstrated the ability to produce quality code on a deadline as well as learn new skills quickly through the projects that I completed during my schooling. 
+                        I am eager to bring a fresh perspective and a passion for technology to my next venture.</p>
                 </div>
             </div>
         </div>
