--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class = "container-fluid">
             <div class = "row">
                 <div class = "col-md-4">
-                    <img class="rounded-circle img-fluid float-left img-thumbnail" alt="avatar1" src="/images/AboutMe.jpg">
+                    <img class="rounded-circle img-fluid float-left img-thumbnail" alt="avatar1" src="/images/AboutMe2.jpg">
                 </div>
                 <div class = "col-md-8">
                     <p>Highly motivated and detail-oriented recent graduate with a strong foundation in Software Development. 
