--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
             background-size: cover;
             background-position: center;
         }
+        .section-intro {
+            padding: 50px 20px;
+            min-height: 100vh;
+            background-size: cover;
+            background-position: center;
+        }
         .navbar {
             position: fixed;
             right: 0;
@@ -86,7 +92,7 @@
     </nav>
 
     <!-- Intro Section -->
-    <section id="intro" class="section d-flex align-items-center text-white">
+    <section id="intro" class="section-intro d-flex align-items-center text-white">
         <div class="container text-center">
             <h1>Thomas Bartlett</h1>
             <div class="ghost-writer">
