--- a/index.html
+++ b/index.html
@@ -83,12 +83,19 @@
 </head>
 <body>
     <!-- Floating Navigation -->
-    <nav class="navbar flex-column">
-        <a href="#about" class="nav-link">A</a>
-        <a href="#projects" class="nav-link">P</a>
-        <a href="#education" class="nav-link">E</a>
-        <a href="#work" class="nav-link">W</a>
-        <a href="#contact" class="nav-link">C</a>
+    <nav class="navbar flex-column navbar-expand-sm">
+        <div class="container>
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#idNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="idNav">
+                <a href="#about" class="nav-link">A</a>
+                <a href="#projects" class="nav-link">P</a>
+                <a href="#education" class="nav-link">E</a>
+                <a href="#work" class="nav-link">W</a>
+                <a href="#contact" class="nav-link">C</a>
+            </div>
+        </div>
     </nav>
 
     <!-- Intro Section -->
