--- a/index.html
+++ b/index.html
@@ -89,11 +89,13 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="idNav">
-                <a href="#about" class="nav-link">A</a>
-                <a href="#projects" class="nav-link">P</a>
-                <a href="#education" class="nav-link">E</a>
-                <a href="#work" class="nav-link">W</a>
-                <a href="#contact" class="nav-link">C</a>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a href="#about" class="nav-link">A</a></li>
+                    <li class="nav-item"><a href="#projects" class="nav-link">P</a></li>
+                    <li class="nav-item"><a href="#education" class="nav-link">E</a></li>
+                    <li class="nav-item"><a href="#work" class="nav-link">W</a></li>
+                    <li class="nav-item"><a href="#contact" class="nav-link">C</a></li>
+                </ul>
             </div>
         </div>
     </nav>
