--- a/index.html
+++ b/index.html
@@ -83,21 +83,12 @@
 </head>
 <body>
     <!-- Floating Navigation -->
-    <nav class="navbar flex-column navbar-expand-sm">
-        <div class="container>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#idNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="idNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="#about" class="nav-link">A</a></li>
-                    <li class="nav-item"><a href="#projects" class="nav-link">P</a></li>
-                    <li class="nav-item"><a href="#education" class="nav-link">E</a></li>
-                    <li class="nav-item"><a href="#work" class="nav-link">W</a></li>
-                    <li class="nav-item"><a href="#contact" class="nav-link">C</a></li>
-                </ul>
-            </div>
-        </div>
+    <nav class="navbar flex-column">
+        <a href="#about" class="nav-link">A</a>
+        <a href="#projects" class="nav-link">P</a>
+        <a href="#education" class="nav-link">E</a>
+        <a href="#work" class="nav-link">W</a>
+        <a href="#contact" class="nav-link">C</a>
     </nav>
 
     <!-- Intro Section -->
