--- a/index.html
+++ b/index.html
@@ -129,9 +129,13 @@
 
     <!-- Education Section -->
     <section id="education" class="section d-flex align-items-center">
-        <div class="container text-center">
-            <h1>Education</h1>
-            <p class="lead">List your educational background here.</p>
+        <div class="Jumbotron col-md-6 text-center">
+            <div class="container">
+                <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKhtXE2o4z_lLIFTqUIc3QK4EkJrSfyyuIog&s">
+            </div>
+            <div class="containter">
+                <p>School Info</p>
+            </div>
         </div>
     </section>
 
