--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
     <!-- Education Section -->
     <section id="education" class="section d-flex align-items-center">
-        <div class="Jumbotron col-md-6 text-center">
+        <div class="Jumbotron col-md-6 text-center" style="background-color:#ffe033;">
             <div class="container">
                 <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKhtXE2o4z_lLIFTqUIc3QK4EkJrSfyyuIog&s">
             </div>
