--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
             background-size: cover;
         }
         #education {
-            background-color: #dee2e6;
+            background-image: url("https://www.appily.com/sites/default/files/styles/max_1200/public/images/hero/college/183044_hero.jpg?itok=hXJVZTns");
+            background-repeat: no repeat;
+            background-size: cover;
         }
         #work {
             background-color: #ced4da;
