--- a/index.html
+++ b/index.html
@@ -131,12 +131,14 @@
 
     <!-- Education Section -->
     <section id="education" class="section d-flex align-items-center">
-        <div class="Jumbotron col-md-6 text-center" style="background-color:#ffe033;">
+        <div class="jumbotron jumbotron-fluid col-md-6 text-center" style="background-color:#ffe033;">
             <div class="container">
-                <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKhtXE2o4z_lLIFTqUIc3QK4EkJrSfyyuIog&s">
+                <img class="img-fluid" src="https://www.pennlive.com/resizer/v2/https%3A%2F%2Fadvancelocal-adapter-image-uploads.s3.amazonaws.com%2Fimage.pennlive.com%2Fhome%2Fpenn-media%2Fwidth2048%2Fimg%2Fpatriotnewssports%2Fphoto%2Fmvillejpg-42b3a80d4b39aed9.jpg?auth=73d609ca222adc07d74480c7c1eb85c5cf36d3c7bab86dba156cb4569cd1018d&width=1280&quality=90">
             </div>
             <div class="containter">
-                <p>School Info</p>
+                <h1 class="display-4">Millersville University</h1>
+                <p class="lead">Millersville, Pennsylvania</p>
+                <hr class="my-4">
             </div>
         </div>
     </section>
