--- a/index.html
+++ b/index.html
@@ -141,6 +141,18 @@
                 <hr class="my-4">
             </div>
         </div>
+
+        <div class="jumbotron jumbotron-fluid col-md-6 text-center" style="background-color:#00006f;">
+            <div class="container">
+                <img class="img-fluid" src="https://ogden_images.s3.amazonaws.com/www.nashuatelegraph.com/images/2020/12/15184558/SNHUlogo.png">
+            </div>
+            <div class="containter">
+                <h1 class="display-4">Southern New Hampshire University</h1>
+                <p class="lead">Manchester, New Hampshire</p>
+                <p class="lead">Online Degree Program</p>
+                <hr class="my-4">
+            </div>
+        </div>
     </section>
 
     <!-- Work Experiences Section -->
