--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
 
         <div class="jumbotron jumbotron-fluid col-md-6 text-center" style="background-color:#00006f;">
             <div class="container">
-                <img class="img-fluid" src="https://ogden_images.s3.amazonaws.com/www.nashuatelegraph.com/images/2020/12/15184558/SNHUlogo.png">
+                <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDxcXn4NtL8K9lQoE43RNc5y7Ai01eJ5UYgQ&s">
             </div>
-            <div class="containter">
+            <div class="containter" style="text-color:#eed30e;">
                 <h1 class="display-4">Southern New Hampshire University</h1>
                 <p class="lead">Manchester, New Hampshire</p>
                 <p class="lead">Online Degree Program</p>
