--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
 
     <!-- Education Section -->
     <section id="education" class="section d-flex align-items-center">
-        <div class="jumbotron jumbotron-fluid col-md-6 text-center" style="background-color:#ffe033;">
+        <div class="jumbotron jumbotron-fluid col-md-6 text-center bg-dark text-white">
             <div class="container">
-                <img class="img-fluid" src="https://www.pennlive.com/resizer/v2/https%3A%2F%2Fadvancelocal-adapter-image-uploads.s3.amazonaws.com%2Fimage.pennlive.com%2Fhome%2Fpenn-media%2Fwidth2048%2Fimg%2Fpatriotnewssports%2Fphoto%2Fmvillejpg-42b3a80d4b39aed9.jpg?auth=73d609ca222adc07d74480c7c1eb85c5cf36d3c7bab86dba156cb4569cd1018d&width=1280&quality=90">
+                <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZw3wyLUAq0M9jdTlz_5r3ema636WXDYd7bQ&s">
             </div>
             <div class="containter">
                 <h1 class="display-4">Millersville University</h1>
