--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
             </div>
         </div>
 
-        <div class="jumbotron jumbotron-fluid col-md-6 text-center bg-warning text-navy">
+        <div class="jumbotron jumbotron-fluid col-md-6 text-center bg-warning"style="text-color:#031875;">
             <div class="container">
                 <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1k1GnViCR9Kg5dpOuP_CiOlL7fG4eVYp7RQ&s">
             </div>
-            <div class="containter" style="text-color:#eed30e;">
+            <div class="containter">
                 <h1 class="display-4">Southern New Hampshire University</h1>
                 <p class="lead">Manchester, New Hampshire</p>
                 <p class="lead">Online Degree Program</p>
