--- a/index.html
+++ b/index.html
@@ -59,9 +59,6 @@
             background-repeat: no repeat;
             background-size: cover;
         }
-        #snhu {
-            text-color: #eed30e;
-        }
         #work {
             background-color: #ced4da;
         }
@@ -145,7 +142,7 @@
             </div>
         </div>
 
-        <div class="jumbotron jumbotron-fluid col-md-6 text-center bg-warning"style="text-color:#031875;">
+        <div class="jumbotron jumbotron-fluid col-md-6 text-center bg-warning" style="color:#00244e;">
             <div class="container">
                 <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1k1GnViCR9Kg5dpOuP_CiOlL7fG4eVYp7RQ&s">
             </div>
