--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </div>
         </div>
 
-        <div class="jumbotron jumbotron-fluid col-md-6 text-center bg-warning" style="color:#00244e;">
+        <div class="jumbotron jumbotron-fluid col-md-6 text-center bg-warning text-white">
             <div class="container">
                 <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1k1GnViCR9Kg5dpOuP_CiOlL7fG4eVYp7RQ&s">
             </div>
