--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             background-size: cover;
         }
         .snhu {
-            color: #00244e;
+            color: #59ace9;
         }
         #work {
             background-color: #ced4da;
