--- a/index.html
+++ b/index.html
@@ -59,8 +59,13 @@
             background-repeat: no repeat;
             background-size: cover;
         }
+        .millersville {
+            background-color: warning;
+            color: black;
+        }
         .snhu {
-            color: #59ace9;
+            background-color: #00244e;
+            color: warning;
         }
         #work {
             background-color: #ced4da;
@@ -134,9 +139,9 @@
 
     <!-- Education Section -->
     <section id="education" class="section d-flex align-items-center">
-        <div class="jumbotron jumbotron-fluid col-md-6 text-center bg-dark text-warning">
+        <div class="jumbotron jumbotron-fluid col-md-6 text-center millersville">
             <div class="container">
-                <img class="img-fluid" src="https://play-lh.googleusercontent.com/v96aGpP9Ynm3wAjYk3i4a__N8Rj9PyVBVpHHtiILzA9zHuPDqr2nnaDeaIRYk1EwEqEJ">
+                <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVoW92VCB1ZtS6aZcQrJUaAe3sXu4uFedtvz04rUMyE8msYQo6vw2t31Ox9bcPCDLTT38&usqp=CAU">
             </div>
             <div class="containter">
                 <h1 class="display-4">Millersville University</h1>
@@ -145,11 +150,11 @@
             </div>
         </div>
 
-        <div class="jumbotron jumbotron-fluid col-md-6 text-center bg-warning">
+        <div class="jumbotron jumbotron-fluid col-md-6 text-center snhu">
             <div class="container">
                 <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1k1GnViCR9Kg5dpOuP_CiOlL7fG4eVYp7RQ&s">
             </div>
-            <div class="containter snhu">
+            <div class="containter">
                 <h1 class="display-4">Southern New Hampshire University</h1>
                 <p class="lead">Manchester, New Hampshire</p>
                 <p class="lead">Online Degree Program</p>
