--- a/index.html
+++ b/index.html
@@ -59,13 +59,8 @@
             background-repeat: no repeat;
             background-size: cover;
         }
-        .millersville {
-            background-color: warning;
-            color: black;
-        }
         .snhu {
             background-color: #00244e;
-            color: warning;
         }
         #work {
             background-color: #ced4da;
@@ -139,7 +134,7 @@
 
     <!-- Education Section -->
     <section id="education" class="section d-flex align-items-center">
-        <div class="jumbotron jumbotron-fluid col-md-6 text-center millersville">
+        <div class="jumbotron jumbotron-fluid col-md-6 text-center bg-warning">
             <div class="container">
                 <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVoW92VCB1ZtS6aZcQrJUaAe3sXu4uFedtvz04rUMyE8msYQo6vw2t31Ox9bcPCDLTT38&usqp=CAU">
             </div>
@@ -154,7 +149,7 @@
             <div class="container">
                 <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1k1GnViCR9Kg5dpOuP_CiOlL7fG4eVYp7RQ&s">
             </div>
-            <div class="containter">
+            <div class="containter text-warning">
                 <h1 class="display-4">Southern New Hampshire University</h1>
                 <p class="lead">Manchester, New Hampshire</p>
                 <p class="lead">Online Degree Program</p>
