--- a/index.html
+++ b/index.html
@@ -134,28 +134,33 @@
 
     <!-- Education Section -->
     <section id="education" class="section d-flex align-items-center">
-        <div class="jumbotron jumbotron-fluid col-md-6 text-center bg-warning">
-            <div class="container">
-                <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVoW92VCB1ZtS6aZcQrJUaAe3sXu4uFedtvz04rUMyE8msYQo6vw2t31Ox9bcPCDLTT38&usqp=CAU">
-            </div>
-            <div class="containter">
-                <h1 class="display-4">Millersville University</h1>
-                <p class="lead">Millersville, Pennsylvania</p>
-                <hr class="my-4">
-            </div>
-        </div>
-
-        <div class="jumbotron jumbotron-fluid col-md-6 text-center snhu">
-            <div class="container">
-                <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1k1GnViCR9Kg5dpOuP_CiOlL7fG4eVYp7RQ&s">
-            </div>
-            <div class="containter text-warning">
-                <h1 class="display-4">Southern New Hampshire University</h1>
-                <p class="lead">Manchester, New Hampshire</p>
-                <p class="lead">Online Degree Program</p>
-                <hr class="my-4">
+        <div class="row">
+            <div class="jumbotron jumbotron-fluid col-md-6 col-md-offset-3 text-center bg-warning">
+                <div class="container">
+                    <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVoW92VCB1ZtS6aZcQrJUaAe3sXu4uFedtvz04rUMyE8msYQo6vw2t31Ox9bcPCDLTT38&usqp=CAU">
+                </div>
+                <div class="containter">
+                    <h1 class="display-4">Millersville University</h1>
+                    <p class="lead">Millersville, Pennsylvania</p>
+                    <hr class="my-4">
+                </div>
             </div>
         </div>
+        
+        <div class="row">
+            <div class="jumbotron jumbotron-fluid col-md-6 col-md-offset-3 text-center snhu">
+                <div class="container">
+                    <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1k1GnViCR9Kg5dpOuP_CiOlL7fG4eVYp7RQ&s">
+                </div>
+                <div class="containter text-warning">
+                    <h1 class="display-4">Southern New Hampshire University</h1>
+                    <p class="lead">Manchester, New Hampshire</p>
+                    <p class="lead">Online Degree Program</p>
+                    <hr class="my-4">
+                </div>
+            </div>
+        </div>
+        
     </section>
 
     <!-- Work Experiences Section -->
