--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <!-- Education Section -->
     <section id="education" class="section d-flex align-items-center">
-            <div class="jumbotron jumbotron-fluid col-md-6 col-md-offset-3 text-center bg-warning">
+            <div class="container col-md-6 col-md-offset-3 text-center bg-warning">
                 <div class="container">
                     <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVoW92VCB1ZtS6aZcQrJUaAe3sXu4uFedtvz04rUMyE8msYQo6vw2t31Ox9bcPCDLTT38&usqp=CAU">
                 </div>
@@ -145,7 +145,7 @@
                 </div>
             </div>
             <br>
-            <div class="jumbotron jumbotron-fluid col-md-6 col-md-offset-3 text-center snhu">
+            <div class="container col-md-6 col-md-offset-3 text-center snhu">
                 <div class="container">
                     <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1k1GnViCR9Kg5dpOuP_CiOlL7fG4eVYp7RQ&s">
                 </div>
