--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
     </section>
 
     <!-- Education Section -->
-    <section id="education" class="section d-flex align-items-center">
-        <div class="row">
+    <section id="education" class="section d-flex flex-column align-items-center">
             <div class="container-fluid col-md-6 text-center bg-warning">
                 <div class="container">
                     <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVoW92VCB1ZtS6aZcQrJUaAe3sXu4uFedtvz04rUMyE8msYQo6vw2t31Ox9bcPCDLTT38&usqp=CAU">
@@ -145,8 +144,6 @@
                     <hr class="my-4">
                 </div>
             </div>
-        </div>
-        <div class="row">
             <div class="container-fluid col-md-6 text-center snhu">
                 <div class="container">
                     <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1k1GnViCR9Kg5dpOuP_CiOlL7fG4eVYp7RQ&s">
@@ -158,7 +155,6 @@
                     <hr class="my-4">
                 </div>
             </div>
-        </div>
 
     </section>
 
