--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <!-- Education Section -->
     <section id="education" class="section d-flex flex-column align-items-center">
-            <div class="container-fluid col-md-6 text-center bg-warning mb-3">
+            <div class="container-fluid text-center bg-warning mb-3">
                 <div class="container">
                     <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVoW92VCB1ZtS6aZcQrJUaAe3sXu4uFedtvz04rUMyE8msYQo6vw2t31Ox9bcPCDLTT38&usqp=CAU">
                 </div>
@@ -144,7 +144,7 @@
                     <hr class="my-4">
                 </div>
             </div>
-            <div class="container-fluid col-md-6 text-center snhu">
+            <div class="container-fluid text-center snhu">
                 <div class="container">
                     <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1k1GnViCR9Kg5dpOuP_CiOlL7fG4eVYp7RQ&s">
                 </div>
