--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </head>
 <body>
     <!-- Floating Navigation -->
-    <nav class="navbar flex-column">
+    <nav class="navbar flex-column" id="navigation">
         <a href="#about" class="nav-link">A</a>
         <a href="#projects" class="nav-link">P</a>
         <a href="#education" class="nav-link">E</a>
@@ -96,6 +96,13 @@
         <a href="#contact" class="nav-link">C</a>
     </nav>
 
+    <!--Moblie Navigation-->
+    <nav class="navbar navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+  </nav>
+    
     <!-- Intro Section -->
     <section id="intro" class="section-intro d-flex align-items-center text-white">
         <div class="container text-center">
