--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
     </nav>
 
     <!-- Intro Section -->
-    <section id="intro" class="section d-flex align-items-center">
+    <section id="intro" class="section d-flex align-items-center text-white">
         <div class="container text-center">
-            <h1>Projects</h1>
+            <h1>Thomas Bartlett</h1>
             <span id="text"></span><span class="cursor">|</span>
         </div>
     </section>
@@ -125,7 +125,7 @@
     <!-- Projects Section -->
     <section id="projects" class="section d-flex align-items-center">
         <div class="container text-center">
-            <h1>Thomas Bartlett</h1>
+            <h1>Projects</h1>
             <p class="lead">Showcase your projects here.</p>
         </div>
     </section>
