--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </nav>
 
     <!-- Intro Section -->
-    <section id="intro" class="section d-flex align-items-center text-white">
+    <section id="intro" class="section-intro d-flex align-items-center text-white">
         <div class="container text-center">
             <h1>Thomas Bartlett</h1>
             <span id="text"></span><span class="cursor">|</span>
