--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
 
     <!-- Education Section -->
     <section id="education" class="section d-flex flex-column align-items-center">
+        <div class="container">
+            <h1 class="display-4 fw-bold text-white">Education</h1>
+        </div> 
             <div class="container-fluid text-center bg-warning mb-3">
                 <div class="container">
                     <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVoW92VCB1ZtS6aZcQrJUaAe3sXu4uFedtvz04rUMyE8msYQo6vw2t31Ox9bcPCDLTT38&usqp=CAU">
