--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     <!-- Education Section -->
     <section id="education" class="section d-flex flex-column align-items-center">
-        <div class="container">
+        <div class="container text-center">
             <h1 class="display-4 fw-bold text-white">Education</h1>
         </div> 
             <div class="container-fluid text-center bg-warning mb-3">
@@ -143,6 +143,11 @@
                     <h1 class="display-4">Millersville University</h1>
                     <p class="lead">Millersville, Pennsylvania</p>
                     <hr class="my-4">
+                </div>
+                <div class="container text-start">
+                    <p>Years Attended: 2005-2009</p>
+                    <p>Degree Earned: Bachelor of Science - Elementary Education</p>
+                    <p>GPA: 3.18</p>
                 </div>
             </div>
             <div class="container-fluid text-center snhu">
