--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="container text-center">
             <h1 class="display-4 fw-bold text-white">Education</h1>
         </div> 
-            <div class="container-fluid text-center bg-warning mb-3">
+            <div class="container-fluid text-center bg-warning mb-3 justify-content-md-center">
                 <div class="container">
                     <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVoW92VCB1ZtS6aZcQrJUaAe3sXu4uFedtvz04rUMyE8msYQo6vw2t31Ox9bcPCDLTT38&usqp=CAU">
                 </div>
