--- a/index.html
+++ b/index.html
@@ -134,33 +134,42 @@
     <section id="education" class="section d-flex flex-column align-items-center">
         <div class="container text-center">
             <h1 class="display-4 fw-bold text-white">Education</h1>
-        </div> 
-            <div class="container-md text-center bg-warning mb-3">
-                <div class="container">
-                    <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVoW92VCB1ZtS6aZcQrJUaAe3sXu4uFedtvz04rUMyE8msYQo6vw2t31Ox9bcPCDLTT38&usqp=CAU">
-                </div>
-                <div class="containter">
-                    <h1 class="display-4">Millersville University</h1>
-                    <p class="lead">Millersville, Pennsylvania</p>
-                    <hr class="my-4">
-                </div>
-                <div class="container text-start">
-                    <p>Years Attended: 2005-2009</p>
-                    <p>Degree Earned: Bachelor of Science - Elementary Education</p>
-                    <p>GPA: 3.18</p>
-                </div>
+        </div>
+        <div class="container-md text-center snhu mb-3">
+            <div class="container">
+                <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1k1GnViCR9Kg5dpOuP_CiOlL7fG4eVYp7RQ&s">
             </div>
-            <div class="container-fluid text-center snhu">
-                <div class="container">
-                    <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1k1GnViCR9Kg5dpOuP_CiOlL7fG4eVYp7RQ&s">
-                </div>
-                <div class="containter text-warning">
-                    <h1 class="display-4">Southern New Hampshire University</h1>
-                    <p class="lead">Manchester, New Hampshire</p>
-                    <p class="lead">Online Degree Program</p>
-                    <hr class="my-4">
-                </div>
+            <div class="containter text-warning">
+                <h1 class="display-4">Southern New Hampshire University</h1>
+                <p class="lead">Manchester, New Hampshire</p>
+                <p class="lead">Online Degree Program</p>
+                <hr class="my-4">
             </div>
+            <div class="container text-start">
+                <p>Years Attended: 2022-2024</p>
+                <p>Degree Earned: Bachelor of Science - Computer Science</p>
+                <p>Concentration: Software Engineering</p>
+                <p>GPA: 4.0</p>
+                <p>Honors: Summa Cum Laude</p>
+            </div>
+        </div>
+        
+        <div class="container-md text-center bg-warning mb-3">
+            <div class="container">
+                <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVoW92VCB1ZtS6aZcQrJUaAe3sXu4uFedtvz04rUMyE8msYQo6vw2t31Ox9bcPCDLTT38&usqp=CAU">
+            </div>
+            <div class="containter">
+                <h1 class="display-4">Millersville University</h1>
+                <p class="lead">Millersville, Pennsylvania</p>
+                <hr class="my-4">
+            </div>
+            <div class="container text-start">
+                <p>Years Attended: 2005-2009</p>
+                <p>Degree Earned: Bachelor of Science - Elementary Education</p>
+                <p>GPA: 3.18</p>
+            </div>
+        </div>
+            
 
     </section>
 
