--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <p class="lead">Online Degree Program</p>
                 <hr class="my-4">
             </div>
-            <div class="container text-start">
+            <div class="container text-start text-warning">
                 <p>Years Attended: 2022-2024</p>
                 <p>Degree Earned: Bachelor of Science - Computer Science</p>
                 <p>Concentration: Software Engineering</p>
