--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                     <img class="rounded-circle img-fluid img-thumbnail" alt="avatar1" src="/images/AboutMe2.jpg">
                 </div>
                 <div class = "col-md-9">
+                    <h1 class="display-4 fw-bold">About Me</h1>
                     <p>Highly motivated and detail-oriented recent graduate with a strong foundation in Software Development. 
                         Proficient in multiple aspects of the software development lifecycle, as well as multiple tools and languages for application development, developed through my recent studies at Southern New Hampshire University Online. 
                         I have demonstrated the ability to produce quality code on a deadline as well as learn new skills quickly through the projects that I completed during my schooling. 
@@ -135,7 +136,9 @@
         <div class="container text-center">
             <h1 class="display-4 fw-bold text-white">Education</h1>
         </div>
-        <div class="container-md text-center snhu mb-3">
+
+        <!--SNHU Info-->
+        <div class="container-md text-center snhu mb-3 pt-2">
             <div class="container">
                 <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1k1GnViCR9Kg5dpOuP_CiOlL7fG4eVYp7RQ&s">
             </div>
@@ -153,8 +156,9 @@
                 <p>Honors: Summa Cum Laude</p>
             </div>
         </div>
-        
-        <div class="container-md text-center bg-warning mb-3">
+
+        <!--Millersville Info-->
+        <div class="container-md text-center bg-warning mb-3 pt2">
             <div class="container">
                 <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVoW92VCB1ZtS6aZcQrJUaAe3sXu4uFedtvz04rUMyE8msYQo6vw2t31Ox9bcPCDLTT38&usqp=CAU">
             </div>
