--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
                 opacity: 0;
             }
         }
+        .vl{
+            width: 1px;
+            background-color: black;
+            height: 100%;
+            float: left;
+        }
     </style>
 </head>
 <body>
@@ -158,7 +164,7 @@
         </div>
 
         <!--Millersville Info-->
-        <div class="container-md text-center bg-warning mb-3 pt2">
+        <div class="container-md text-center bg-warning mb-3 pt-2">
             <div class="container">
                 <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVoW92VCB1ZtS6aZcQrJUaAe3sXu4uFedtvz04rUMyE8msYQo6vw2t31Ox9bcPCDLTT38&usqp=CAU">
             </div>
@@ -186,10 +192,18 @@
     </section>
 
     <!-- Contact Me Section -->
-    <section id="contact" class="section d-flex align-items-center">
+    <section id="contact" class="section d-flex">
         <div class="container text-center">
-            <h1>Contact Me</h1>
-            <p class="lead">Provide your contact information here.</p>
+            <span><h1>Please feel free to reach out to me at any of the options below:</h1></span>
+            <div class="container col-md-4">
+                <p class="text-bold">Email: <a href="mailto:thomas.bartlett612@gmail.com">thomas.bartlett612@gmail.com</a></p>
+            </div>
+            <div class="container col-md-4 vl">
+                <p class="text-bold">Phone: <a href="tel:+17177984032">(717)798-4032</a></p>
+            </div>
+            <div class="container col-md-4 vl">
+                <p class="text-bold">LinkedIn: <a href="https://linkedin.com">My LinkedIn Profile</a></p>
+            </div>
         </div>
     </section>
 
