--- a/index.html
+++ b/index.html
@@ -84,12 +84,6 @@
                 opacity: 0;
             }
         }
-        .vl{
-            width: 1px;
-            background-color: black;
-            height: 100%;
-            float: left;
-        }
     </style>
 </head>
 <body>
@@ -195,14 +189,16 @@
     <section id="contact" class="section d-flex">
         <div class="container text-center">
             <span><h1>Please feel free to reach out to me at any of the options below:</h1></span>
-            <div class="container col-md-4">
-                <p class="text-bold">Email: <a href="mailto:thomas.bartlett612@gmail.com">thomas.bartlett612@gmail.com</a></p>
-            </div>
-            <div class="container col-md-4 vl">
-                <p class="text-bold">Phone: <a href="tel:+17177984032">(717)798-4032</a></p>
-            </div>
-            <div class="container col-md-4 vl">
-                <p class="text-bold">LinkedIn: <a href="https://linkedin.com">My LinkedIn Profile</a></p>
+            <div class=row>
+                <div class="container col-md-4">
+                    <p class="text-bold">Email: <a href="mailto:thomas.bartlett612@gmail.com">thomas.bartlett612@gmail.com</a></p>
+                </div>
+                <div class="container col-md-4">
+                    <p class="text-bold">Phone: <a href="tel:+17177984032">(717)798-4032</a></p>
+                </div>
+                <div class="container col-md-4">
+                    <p class="text-bold">LinkedIn: <a href="https://linkedin.com">My LinkedIn Profile</a></p>
+                </div>
             </div>
         </div>
     </section>
