--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     
     <!-- About Me Section -->
     <section id="about" class="section d-flex text-white bg-gradient">
-        <div class = "container-fluid">
+        <div class = "container-md">
             <div class = "row">
                 <div class = "col-md-3">
                     <img class="rounded-circle img-fluid img-thumbnail" alt="avatar1" src="/images/AboutMe2.jpg">
