--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
     <!-- Contact Me Section -->
     <section id="contact" class="section d-flex">
-        <div class="container text-center">
+        <div class="container-md text-center">
             <span><h1>Please feel free to reach out to me at any of the options below:</h1></span>
             <div class=row>
                 <div class="container col-md-4">
@@ -234,7 +234,7 @@
                     <p class="text-bold">Phone: <a href="tel:+17177984032">(717)798-4032</a></p>
                 </div>
                 <div class="container col-md-4">
-                    <p class="text-bold">LinkedIn: <a href="https://linkedin.com">My LinkedIn Profile</a></p>
+                    <p class="text-bold">LinkedIn: <a href="https://linkedin.com" target="_blank">My LinkedIn Profile</a></p>
                 </div>
             </div>
         </div>
