--- a/index.html
+++ b/index.html
@@ -119,6 +119,18 @@
                         I am eager to bring a fresh perspective and a passion for technology to my next venture.</p>
                 </div>
             </div>
+            <h1>A look into some skills I picked up along the way:</h1>
+            <div class = "row">
+                <div class = "col-md-4">
+                    <h1 class="text-center">Skills list 1</h1>
+                </div>
+                <div class = "col-md-4">
+                    <h1 class="text-center">Skills list 2</h1>
+                </div>
+                <div class = "col-md-4">
+                    <h1 class="text-center">Skills list 3</h1>
+                </div>
+            </div>
         </div>
         
     </section>
