--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             background-size: cover;
         }
         #about {
-            background-color: black;
+            background-color: $blue-800;
         }
         #projects {
             background-image: url("/images/project.jpg");
