--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             background-size: cover;
         }
         #about {
-            background-color: #104f7d;
+            background-color: #370661;
         }
         #projects {
             background-image: url("/images/project.jpg");
